--- a/assets/styles/frontend/common/components/list/products.less
+++ b/assets/styles/frontend/common/components/list/products.less
@@ -292,7 +292,7 @@
 
     &__item-set {
         width: 100%;
-        margin-bottom: 15px;
+        margin-bottom: 10px;
 
         border-bottom: 1px solid @color-border;
 
@@ -301,13 +301,9 @@
         }
 
         @media @query-lg {
-            margin-bottom: -1px;
+            margin-bottom: 0;
 
             border-bottom: 0;
-        }
-
-        .box-list--search & {
-            margin-bottom: 15px;
         }
     }
 }
