--- a/assets/styles/frontend/common/components/box/products-set.less
+++ b/assets/styles/frontend/common/components/box/products-set.less
@@ -2,27 +2,16 @@
 
 .box-products-set {
     @media @query-lg {
-        padding: 15px;
+        padding: 10px 15px 15px;
 
-        border: 1px solid @color-border;
-
-        .box-list--search & {
-            border: 0;
-            border-bottom: 1px solid @color-border;
-        }
+        border: 0;
+        border-bottom: 1px solid @color-border;
     }
 
     &:hover {
         @media @query-lg {
-            box-shadow: inset 0 0 1px 1px @color-border-dark;
-
             .box-products-set__title {
                 color: @color-primary;
-            }
-
-            .box-list--search & {
-                box-shadow: none;
-                border-bottom: 1px solid @color-border-dark;
             }
         }
     }
