--- a/templates/Front/Content/Product/productListMacro.html.twig
+++ b/templates/Front/Content/Product/productListMacro.html.twig
@@ -1,104 +1,12 @@
 {% macro list(productViews, listCssClass, productHeadingTagName) %}
+    {% import 'Front/Content/Product/productSetViewMacro.html.twig' as productSetMacro %}
+
     <ul class="list-products js-list js-product-list {{ listCssClass|default('') }}">
         {% for productView in productViews %}
             {% set productSellingPrice = productView.sellingPrice %}
 
             {% if productView.groupItems is not empty %}
-                <li class="list-products__item-set">
-                    <div class="box-products-set">
-                        <div class="box-products-set__row">
-                            <a class="box-products-set__title" href="{{ productView.action.detailUrl }}">
-                                {{ productView.name|striptags|raw }}
-                            </a>
-                        </div>
-                        <div class="box-products-set__row box-products-set__row--without-gap">
-                            <div class="box-products-set__left">
-                                <div class="list-products-set js-horizontal-list" data-type="products-set" data-count-of-product="{{ productView.groupItems|length }}">
-                                    <span class="list-products-set__arrow list-products-set__arrow--prev js-horizontal-list-action-prev">
-                                        <i class="svg svg-slider-arrow"></i>
-                                    </span>
-
-                                    <div class="list-products-set__in">
-                                        <div class="list-products-set__overlay"></div>
-                                        <div class="list-products-set__overlay list-products-set__overlay--right"></div>
-                                        <div class="list-products-set__list js-horizontal-list-slides js-horizontal-list-slides-sets">
-                                            {% for groupItem in productView.groupItems %}
-                                                <a href="{{ productView.action.detailUrl }}" class="list-products-set__item">
-                                                    <div class="list-products-set__item__image">
-                                                        {{ image(groupItem.image, {size: 'listSet', alt: groupItem.name, lazy: true}) }}
-                                                    </div>
-                                                    <div class="list-products-set__item__info">
-                                                        {{ groupItem.name }}
-                                                    </div>
-                                                    {% if not loop.last %}
-                                                        <div class="list-products-set__item__plus">
-                                                            <i class="svg svg-plus-big"></i>
-                                                        </div>
-                                                    {% endif %}
-                                                </a>
-                                            {% endfor %}
-                                        </div>
-                                    </div>
-
-                                    <span class="list-products-set__arrow list-products-set__arrow--next js-horizontal-list-action-next">
-                                        <i class="svg svg-slider-arrow"></i>
-                                    </span>
-                                </div>
-                            </div>
-
-                            <div class="box-products-set__right">
-                                <a class="box-products-set__info" href="{{ productView.action.detailUrl }}">
-                                    {% set productFlagIds = productView.flagIds %}
-                                    {% set freeTransportAndPaymentFlagId = getFreeTransportAndPaymentFlagIdIfShouldBeDisplayed(productView) %}
-                                    {% if freeTransportAndPaymentFlagId is not null %}
-                                        {% set productFlagIds = { 0: freeTransportAndPaymentFlagId } %}
-                                    {% endif %}
-
-                                    {{ renderFlagsByIds(productFlagIds, 'in-flag--product-set', false, productSellingPrice, productView.variantsCount) }}
-
-                                    {% if productSellingPrice is not null %}
-                                        <div class="box-products-set__info__prices">
-                                            {% if productSellingPrice.hasHigherStandardPrice %}
-                                                <span class="box-products-set__info__prices__old">
-                                                    {{ productSellingPrice.standardPrice.priceWithVat|price }}
-                                                </span>
-                                            {% endif %}
-                                            <span class="box-products-set__info__prices__new{% if productSellingPrice.hasHigherStandardPrice %} box-products-set__info__prices__new--colored{% endif %}">
-                                                {{ productSellingPrice.priceWithVat|price }}
-                                            </span>
-                                        </div>
-                                    {% endif %}
-
-                                    <div class="in-availability">
-                                        <div class="in-availability__text" style="color: {{ getAvailabilityColor(productView.availability) }};">
-                                            {% include 'Front/Content/Product/productViewAvailability.html.twig' %}
-                                        </div>
-                                    </div>
-
-                                    {% if productView.getGiftsCount() > 0 %}
-                                        <div class="box-products-set__info__gift">
-                                            {% set giftCount = productView.getGiftsCount() %}
-                                            {% if giftCount is same as (1) %}
-                                                <span class="box-products-set__info__gift__title">{{ 'Dárek'|trans }}</span>
-                                                {{ productView.getFirstGiftLabel() }}
-                                            {% else %}
-                                                <span class="box-products-set__info__gift__count">
-                                                    {% transchoice giftCount with {'%count%': giftCount} %}
-                                                        [2,4] %count% dárky zdarma |[5,Inf] %count% dárků zdarma
-                                                    {% endtranschoice %}
-                                                </span>
-                                            {% endif %}
-                                        </div>
-                                    {% endif %}
-
-                                    <div class="box-products-set__info__button">
-                                        {{ render(controller('App\\Controller\\Front\\CartController:productActionAction', { listedProductView: productView, showAmountInput: false } )) }}
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </li>
+                {{ productSetMacro.productSetView(productView) }}
             {% else %}
                 <li class="list-products__item js-list-products-item">
                     <div class="list-products__item__in">
