design: add style for price bomb

--- a/assets/styles/frontend/common/components/list/products.less
+++ b/assets/styles/frontend/common/components/list/products.less
@@ -173,6 +173,11 @@
                     text-transform: uppercase;
                     font-weight: 700;
                 }
+
+                &__count {
+                    font-weight: bold;
+                    text-transform: uppercase;
+                }
             }
 
             &__price {
