--- a/assets/styles/frontend/common/main.less
+++ b/assets/styles/frontend/common/main.less
@@ -102,6 +102,7 @@
 @import "components/list/params.less";
 @import "components/list/pickup-place.less";
 @import "components/list/products.less";
+@import "components/list/products-bomb.less";
 @import "components/list/products-line.less";
 @import "components/list/products-slider.less";
 @import "components/list/products-set.less";
@@ -157,6 +158,7 @@
 @import "components/box/prelist.less";
 @import "components/box/preview.less";
 @import "components/box/price-slider.less";
+@import "components/box/products-bomb.less";
 @import "components/box/products-slider.less";
 @import "components/box/products-set.less";
 @import "components/box/progress.less";
