Added warranty to Mergado XML feed for items that have it set.

--- a/templates/Admin/Content/MergadoFeed/feed.xml.twig
+++ b/templates/Admin/Content/MergadoFeed/feed.xml.twig
@@ -75,6 +75,9 @@
                 {% endif -%}
             </DELIVERY>
         {% endfor -%}
+        {% if item.warranty is not null -%}
+            <WARRANTY>{{ item.warranty }}</WARRANTY>
+        {% endif -%}
     </ITEM>
 {% endblock %}
 
