update javascript files
- see https://github.com/shopsys/shopsys/pull/1630
- see https://github.com/shopsys/shopsys/pull/1840
- see https://github.com/shopsys/shopsys/pull/1841
- see https://github.com/shopsys/shopsys/pull/1807

--- a/templates/Front/Layout/base.html.twig
+++ b/templates/Front/Layout/base.html.twig
@@ -49,5 +49,9 @@
         {% block javascripts_bottom %}{% endblock %}
         {{ js_validator_config() }}
         {{ init_js_validation() }}
+
+        {% if app.environment is same as('dev') %}
+            <script async src="//localhost:35729/livereload.js"></script>
+        {% endif %}
     </body>
 </html>
