design: edit small css issues

--- a/assets/styles/frontend/common/components/in/title.less
+++ b/assets/styles/frontend/common/components/in/title.less
@@ -1,10 +1,7 @@
 .in-title {
     display: block;
-    margin-bottom: 20px;
 
-    color: @color-base;
-    font-family: @font-alt;
-    font-weight: 700;
+    color: @color-primary;
 
     &--big {
         font-size: 36px;
