--- a/assets/styles/frontend/common/components/wrap/box.less
+++ b/assets/styles/frontend/common/components/wrap/box.less
@@ -32,8 +32,12 @@
     &__button {
         margin: 0 10px 10px 0;
 
+        &__name {
+            margin-right: 10px;
+        }
+
         &__price {
-            color: @color-add;
+            color: @color-base;
         }
     }
 
