--- a/assets/styles/frontend/common/core/base.less
+++ b/assets/styles/frontend/common/core/base.less
@@ -94,13 +94,13 @@ h1 {
 }
 
 h2 {
-    margin: 0 0 8px 0;
+    margin: 0 0 10px 0;
+    line-height: 36px;
 
-    font-size: 29px;
+    font-size: 30px;
     font-weight: 700;
 
     @media @query-vl {
-        margin-bottom: 20px;
         line-height: 42px;
 
         font-size: 36px;
