--- a/templates/Front/Content/Product/productSetViewMacro.html.twig
+++ b/templates/Front/Content/Product/productSetViewMacro.html.twig
@@ -28,7 +28,7 @@
                                         </div>
                                         {% if not loop.last %}
                                             <div class="list-products-set__item__plus">
-                                                <i class="svg svg-plus"></i>
+                                                <i class="svg svg-plus-big"></i>
                                             </div>
                                         {% endif %}
                                     </a>
