--- a/templates/Front/Content/Error/errorCommon.html.twig
+++ b/templates/Front/Content/Error/errorCommon.html.twig
@@ -21,3 +21,9 @@
     {% endblock %}
 
 {% endblock %}
+
+{% block footer %}
+    {% embed 'Front/Layout/footer.html.twig' %}
+        {% block newsletter_subscription %}{% endblock %}
+    {% endembed %}
+{% endblock %}
