--- a/templates/Front/Content/Order/index.html.twig
+++ b/templates/Front/Content/Order/index.html.twig
@@ -1,5 +1,7 @@
 {% extends 'Front/Layout/layoutWithoutPanel.html.twig' %}
 
+{% set orderStep = flow.getCurrentStepNumber() %}
+
 {% block meta_robots -%}
     <meta name="robots" content="noindex, follow">
 {% endblock %}
@@ -47,10 +49,16 @@
 
 {% block main_content %}
     {{ form_start(form, { attr: { id: "js-order-form", 'data-ajax-save-url': url('front_order_save_form') }}) }}
-        {% include 'Front/Content/Order/step' ~ flow.getCurrentStepNumber() ~ '.html.twig' %}
+        {% include 'Front/Content/Order/step' ~ orderStep ~ '.html.twig' %}
     {{ form_end(form) }}
 
     <span class="js-payment-transport-relations" data-relations="{{ paymentTransportRelations }}"></span>
 {% endblock %}
 
-{% block footer__links %}{% endblock %}
+{% block footer %}
+    {% embed 'Front/Layout/footer.html.twig' %}
+        {% if orderStep in [2,3] %}
+            {% block footer__links %}{% endblock %}
+        {% endif %}
+    {% endembed %}
+{% endblock %}
