--- a/templates/Front/Content/Registration/register.html.twig
+++ b/templates/Front/Content/Registration/register.html.twig
@@ -62,14 +62,12 @@
                             <label class="css-checkbox__image margin-bottom-10" for="{{ form.privacyPolicy.vars.id }}">
                                 {% if privacyPolicyArticle is not null %}
                                     {% set articleUrl = url('front_article_detail', {'id': privacyPolicyArticle.id}) %}
-                                    {{ 'Souhlasím se <a href="%url%" target="_blank">zpracováním osobních údajů</a>.'|trans({'%url%': articleUrl})|raw }}
+                                    {{ "Souhlasím se <a href=\"%url%\" target=\"_blank\">zpracováním osobních údajů</a> a chci odebírat novinky a akční nabídky"|trans({'%url%': articleUrl})|raw }}
                                 {% else %}
-                                    {{ 'Souhlasím se zpracováním osobních údajů.'|trans }}
+                                    {{ 'Souhlasím se zpracováním osobních údajů a chci odebírat novinky a akční nabídky'|trans }}
                                 {% endif %}
                             </label>
-                            <span class="js-validation-errors-list js-validation-error-list-{{ form.privacyPolicy.vars.id }} form-error form-error--under display-none">
-                                <ul class="form-error__list"></ul>
-                            </span>
+                            {{ form_errors(form.privacyPolicy, {errors_attr: { class: 'form-error--under' }}) }}
                         </div>
                     </div>
                 </div>
