--- a/templates/Front/Inline/Cart/addProduct.html.twig
+++ b/templates/Front/Inline/Cart/addProduct.html.twig
@@ -1,3 +1,5 @@
+{% set sellingPrice = getProductSellingPrice(product) %}
+
 {{ form_start(form, {attr: {class: 'js-add-product dont-print', 'data-ajax-url': url('front_cart_add_product_ajax'), 'multipleForm': true}}) }}
     {% set cssClass = '' %}
     {% if disabled is same as (true) %}
@@ -74,17 +76,23 @@
                             {{ form_widget(form.add, {label: 'Do košíku'|trans, attr: {class: cssClass ~ 'in-add-to-cart__button btn-no-style ', disabled: disabled, 'data-hard-disabled': hardDisabled }}) }}
                         </div>
                     </div>
-                    <button class="box-detail-add__buttons__item-variant box-detail-add__buttons__item-variant--payments btn btn--big js-not-implemented-yet" {% if disabled %}disabled="disabled"{% endif %} data-hard-disabled="{{ hardDisabled }}">{{ 'Na splátky'|trans }}</button>
+                    {% if showCofidisBanner %}
+                        <div class="box-detail-add__buttons__item-variant box-detail-add__buttons__item-variant--payments btn btn--big js-cofidis-calculator" {% if disabled %}disabled="disabled"{% endif %} data-product-price="{{ sellingPrice.priceWithVat.amount }}" data-hard-disabled="{{ hardDisabled }}">{{ 'Spočítat splátky'|trans }}</div>
+                    {% endif %}
                 {% else %}
                     {{ form_widget(form.add, {label: 'Přidat do košíku'|trans, attr: {class: cssClass ~ 'box-detail-add__buttons__item btn btn--success btn--large', disabled: disabled, 'data-hard-disabled': hardDisabled }}) }}
-                    <button class="box-detail-add__buttons__item btn btn--large js-not-implemented-yet" {% if disabled %}disabled="disabled"{% endif %} data-hard-disabled="{{ hardDisabled }}">{{ 'Koupit na splátky'|trans }}</button>
+                    {% if showCofidisBanner %}
+                        <div class="box-detail-add__buttons__item btn btn--large js-cofidis-calculator" {% if disabled %}disabled="disabled"{% endif %} data-product-price="{{ sellingPrice.priceWithVat.amount }}" data-hard-disabled="{{ hardDisabled }}">{{ 'Spočítat splátky'|trans }}</div>
+                    {% endif %}
                 {% endif %}
             {% endif %}
         </div>
 
-        <div class="box-detail-add__payments{% if type == 'detailVariant' %} box-detail-add__payments--variant{% endif %} js-not-implemented-yet">
-            <img class="box-detail-add__payments__image" src="{{ asset('public/frontend/images/cofidis-logo.png')}}" alt="{{ 'Cofidis'|trans }}">
-            Na splátky ještě dnes již od 260 Kč měsíčně
-        </div>
+        {% if showCofidisBanner %}
+            <div class="box-detail-add__payments{% if type == 'detailVariant' %} box-detail-add__payments--variant{% endif %}">
+                <img class="box-detail-add__payments__image" src="{{ asset('public/frontend/images/cofidis-logo.png')}}" alt="{{ 'Cofidis'|trans }}">
+                Na splátky ještě dnes již od {{ sellingPrice.monthlyCofidisBasePayment|price }} měsíčně
+            </div>
+        {% endif %}
     {% endif %}
 {{ form_end(form) }}
