--- a/templates/Front/Content/Default/index.html.twig
+++ b/templates/Front/Content/Default/index.html.twig
@@ -39,10 +39,9 @@
             <div class="web__container web__container--no-padding">
                 <div id="top-products" class="box-products-slider">
                     <h1 class="box-products-slider__title">
-                        {{ 'Vybíráme to nejlepší'|trans }}
+                        {{ 'Tento měsíc máme v akci'|trans }}
                     </h1>
-                    <a href="#" class="box-products-slider__subtitle js-not-implemented-yet">{{ 'Přejít na všechny'|trans }}</a>
-                    {{ productList.horizontalList(topProducts, 'h3', 'top-products', false) }}
+                    {{ productList.horizontalList(topProducts, 'list-products-slider--big', 'h3', 'top-products', false) }}
                 </div>
             </div>
         </div>
